--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
       <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Conserto Especializado de Notebooks e Impressoras</h1>
       <p class="lead">Soluções rápidas e com garantia para seus equipamentos. Técnicos qualificados e atendimento de confiança. Peça seu orçamento sem compromisso.</p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <a href="#" class="btn btn-primary btn-lg px-4 me-md-2">Agendar Reparo</a>
-        <a href="#" class="btn btn-outline-secondary btn-lg px-4">Entrar em Contato</a>
+        <a href="{{ url_for('login_cliente') }}" class="btn btn-primary btn-lg px-4 me-md-2">Área do cliente</a>
+        <a href="{{ url_for('pagina_contato')}}" class="btn btn-outline-secondary btn-lg px-4">Entrar em Contato</a>
       </div>
     </div>
 
