--- a/templates/base_publica.html
+++ b/templates/base_publica.html
@@ -107,6 +107,18 @@
 
   <!-- Conteúdo -->
   <main class="container">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+          <div class="">
+            <div class="alert alert-{{ category }} flash-toast alert-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+          </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
     {% block content %}{% endblock %}
   </main>
 
@@ -117,27 +129,33 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    
-        const toggleBtn = document.getElementById('themeToggle');
-        const themeIcon = document.getElementById('themeIcon');
-        const html = document.documentElement;
+    const toggleBtn = document.getElementById('themeToggle');
+    const themeIcon = document.getElementById('themeIcon');
+    const html = document.documentElement;
 
-        // Recupera tema salvo
-        if (localStorage.getItem('theme')) {
-          const saved = localStorage.getItem('theme');
-          html.setAttribute('data-bs-theme', saved);
-          themeIcon.className = saved === 'dark' ? 'bi bi-moon' : 'bi bi-sun';
-        }
+    // Recupera tema salvo
+    if (localStorage.getItem('theme')) {
+      const saved = localStorage.getItem('theme');
+      html.setAttribute('data-bs-theme', saved);
+      themeIcon.className = saved === 'dark' ? 'bi bi-moon' : 'bi bi-sun';
+    }
 
-        toggleBtn.addEventListener('click', () => {
-          const current = html.getAttribute('data-bs-theme');
-          const next = current === 'dark' ? 'light' : 'dark';
-          html.setAttribute('data-bs-theme', next);
-          localStorage.setItem('theme', next);
-          themeIcon.className = next === 'dark' ? 'bi bi-moon' : 'bi bi-sun';
-        });
+    toggleBtn.addEventListener('click', () => {
+      const current = html.getAttribute('data-bs-theme');
+      const next = current === 'dark' ? 'light' : 'dark';
+      html.setAttribute('data-bs-theme', next);
+      localStorage.setItem('theme', next);
+      themeIcon.className = next === 'dark' ? 'bi bi-moon' : 'bi bi-sun';
+    });
 
-
+    window.addEventListener('load', function() {
+      const alerts = document.querySelectorAll('.alert');
+      alerts.forEach(function(alert) {
+        setTimeout(function() {
+          new bootstrap.Alert(alert).close();
+        }, 5000)
+      });
+    });
   </script>
 </body>
 </html>
