--- a/templates/listar_servicos.html
+++ b/templates/listar_servicos.html
@@ -3,7 +3,22 @@
 {% block content %}
 <div class="d-flex justify-content-center">
   <div class="card shadow-sm w-100 rounded-3 mx-auto my-3" style="max-width: 45rem">
-    <h4 class="card-header text-center fw-bold">Lista de Serviços</h4>
+        <!-- Header com título e busca -->
+        <div class="card-header">
+          <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+            <h4 class="fw-bold mb-2 mb-md-0">Lista de Serviços</h4>
+
+            <!-- Campo de busca -->
+            <form action="{{ url_for('listar_servicos')}}" method="GET" class="w-auto w-md-auto align-content-end">
+              <div class="input-group">
+                <input type="text" name="termo_busca" class="form-control" placeholder="Buscar serviços..." value="{{ request.args.get('termo_busca', '') }}">
+                <button type="submit" class="btn btn-primary btn-sm">
+                  <i class="bi bi-search"></i> Buscar
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
 
     {% if servicos|length == 0 %}
       <div class="alert-secondary m-3 text-center">
